# -ComputerGraphics

./: .gitmodules  README.md
lab1/: lab1.sln
lab1/lab1/: GLRenderSystem.cpp  GLRenderSystem.h  GLWindow.cpp  GLWindow.h  glad.c  lab1.vcxproj  lab1.vcxproj.filters  main.cpp
lab1/lab1/x64/Debug/: lab1.exe.recipe  vc143.idb
lab1/lab1/x64/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab2/: lab2.sln
lab2/lab2/: Camera.cpp  Camera.h  GLRenderSystem.cpp  GLRenderSystem.h  GLWindow.cpp  GLWindow.h  Viewport.cpp  Viewport.h  glad.h  lab2.vcxproj  lab2.vcxproj.filters  main.cpp
lab2/lab2/x64/Debug/: lab2.exe.recipe  lab2.ilk  vc143.idb
lab2/lab2/x64/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab3/: CMakeLists.txt
lab3/lab3/: CMakeLists.txt  Camera.h  Mesh.h  Model.cpp  Model.h  Shader.h  main.cpp
lab3/res/: light.fs  texture.vs
lab3/res/cs/: cs2.mtl
